--- a/learn-m365-pr/wwl/manage-microsoft-purview-audit-standard/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-microsoft-purview-audit-standard/7-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 06/30/2022
+  ms.date: 07/01/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -30,7 +30,7 @@ quiz:
       explanation: "Correct. To search the audit log, administrators and members of investigation teams must be assigned the View-Only Audit Logs or Audit Logs role in Exchange Online."
   - content: "World Wide Importers has finished running a search on its audit log. Allan Deyoung, the company's Enterprise Admin, downloaded the search results in a CSV file and opened it in Excel. Allan noticed that the AuditData column displayed multiple properties that were combined together for each row of data. What feature in Excel's Power Query Editor can Allan use to sort and filter on a specific property in this column?"
     choices:
-    - content: "the JSON tranform feature"
+    - content: "the JSON transform feature"
       isCorrect: true
       explanation: "Correct. The AuditData column is a JSON object that contains multiple properties. Allan must use the JSON transform feature in the Power Query Editor in Excel to split each property in the JSON object in the AuditData column into its own column. Allan can then filter columns to view records based on the values of specific properties."
     - content: "the Text/CSV transform feature"
