--- a/learn-m365-pr/wwl/manage-microsoft-purview-ediscovery-standard/4-create-ediscovery-holds.yml
+++ b/learn-m365-pr/wwl/manage-microsoft-purview-ediscovery-standard/4-create-ediscovery-holds.yml
@@ -4,7 +4,7 @@ title: Create eDiscovery holds
 metadata:
   title: Create eDiscovery holds
   description: "Create eDiscovery holds"
-  ms.date: 06/30/2022
+  ms.date: 07/01/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "The hold takes effect immediately after being created"
       isCorrect: false
-      explanation: "Incorrect. It usually takes much longer than this for a hold to take effect."
+      explanation: "Incorrect. Holds usually don't take effect immediately."
     - content: "12 hours"
       isCorrect: false
-      explanation: "Incorrect. It usually takes longer than this for a hold to take effect."
+      explanation: "Incorrect. It usually takes longer than 12 hours for a hold to take effect."
     - content: "24 hours"
       isCorrect: true
       explanation: "Correct. After an organization creates an eDiscovery hold, it may take up to 24 hours for the hold to take effect."
