--- a/learn-m365-pr/wwl/manage-microsoft-purview-ediscovery-standard/8-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-microsoft-purview-ediscovery-standard/8-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 06/30/2022
+  ms.date: 07/01/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -28,7 +28,7 @@ quiz:
     - content: "90 days"
       isCorrect: false
       explanation: "Incorrect. This value isn't the length of the delay hold."
-  - content: "As the Enterprise Administrator for Contoso, Holly Dickson created an eDiscovery (Standard) case involving members of the Sales group. This group is a Microsoft 365 group. When configuring the search, Holly set the Exchange mailboxes toggle switch to On and selected the Sales group. Which of the following items will be searched?"
+  - content: "As the Enterprise Administrator for Contoso, Holly Dickson created an eDiscovery (Standard) case involving members of the Sales group. This group is a Microsoft 365 group. When Holly configured the search, she set the Exchange mailboxes toggle switch to On and selected the Sales group. Which of the following items will be searched?"
     choices:
     - content: "The Sales group mailbox"
       isCorrect: true
