changed files by pdets auto publish service, publishid[b7840305-b3a6-4b9d-b3cb-23f71c7c9bb1] and do [publish].

--- a/learn-m365-pr/wwl/search-for-content-security-compliance-center/5-export-search-results.yml
+++ b/learn-m365-pr/wwl/search-for-content-security-compliance-center/5-export-search-results.yml
@@ -27,4 +27,4 @@ quiz:
       explanation: "Incorrect. When downloading search results for concurrent download jobs, you should download the results to different folders."
     - content: "Download search results to a mapped network drive"
       isCorrect: false
-      explanation: "Incorrect. Downloading search results to a mapped network drive can have an adverse affect on network traffic."
+      explanation: "Incorrect. Downloading search results to a mapped network drive can have an adverse effect on network traffic."
