Fixed build issues.

--- a/learn-m365-pr/m365/zero-trust-endpoints/5-summary.yml
+++ b/learn-m365-pr/m365/zero-trust-endpoints/5-summary.yml
@@ -4,7 +4,7 @@ title: Summary
 metadata:
   unitType: summary
   title: Summary
-  description: 
+  description: Summary of the module.
   ms.date: 06/22/2022
   author: beccarobins
   ms.author: beccarobins
