--- a/learn-m365-pr/wwl/manage-collaboration-experiences-for-chat-channels/09-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-collaboration-experiences-for-chat-channels/09-knowledge-check.yml
@@ -21,7 +21,7 @@ quiz:
     choices:
     - content: "Configure the settings from Teams client"
       isCorrect: true
-      explanation: "That's correct. Teams owners can control whether team members can create private channels of the team from the Teams client."
+      explanation: "That's is correct. Teams owners can control whether team members can create private channels of the team from the Teams client."
     - content: "Configure Teams policies from Teams admin center"
       isCorrect: false
       explanation: "That's incorrect. Teams policies control whether users can create private channels at the user level."
@@ -32,7 +32,7 @@ quiz:
     choices:
     - content: "Allow users to send emails to a channel email address"
       isCorrect: true
-      explanation: "That's correct. Email integration control is a part of Teams settings at the tenant level."
+      explanation: "That's is correct. Email integration control is a part of Teams settings at the tenant level."
     - content: "Users can delete sent messages"
       isCorrect: false
       explanation: "That's incorrect. Teams admin can control whether users can delete sent messages through messaging policy at the user level."
@@ -46,7 +46,7 @@ quiz:
       explanation: "That's incorrect. Meeting policy doesn't control whether users can use GIF files in Teams."
     - content: "Messaging policy"
       isCorrect: true
-      explanation: "That's correct. Messaging policy controls whether users can use GIF files in Teams."
+      explanation: "That's is correct. Messaging policy controls whether users can use GIF files in Teams."
     - content: "Teams policy"
       isCorrect: false
       explanation: "That's incorrect. Teams policy doesn't control whether users can use GIF files in Teams."
@@ -57,7 +57,7 @@ quiz:
       explanation: "That's incorrect. Messaging policy doesn't control whether users can create private channels."
     - content: "Teams policy"
       isCorrect: true
-      explanation: "That's correct. Teams policy controls whether users can create private channels."
+      explanation: "That's is correct. Teams policy controls whether users can create private channels."
     - content: "Meeting policy"
       isCorrect: false
       explanation: "That's incorrect. Meeting policy doesn't control whether users can create private channels."
@@ -71,7 +71,7 @@ quiz:
       explanation: "That's incorrect. Private channel is a focused spaces for collaboration within a team."
     - content: "Shared channel"
       isCorrect: true
-      explanation: "That's correct. Shared channel is a collaboration space where you can invite people from cross-tenants and add members without adding them to them to a team."
+      explanation: "That's is correct. Shared channel is a collaboration space where you can invite people from cross-tenants and add members without adding them to them to a team."
   - content: "Amy is the Teams admin for Contoso Ltd. The company wants to centralize the cloud file storage to Microsoft 365 (SharePoint and OneDrive) by disabling third-party storage providers. Which of the following should Amy configure in the Teams admin center?"
     choices:
     - content: "Teams apps permission policy"
@@ -79,7 +79,7 @@ quiz:
       explanation: "That's incorrect. Teams apps permission policy doesn't control the file sharing and cloud file storage options for the Files tab."
     - content: "Teams settings"
       isCorrect: true
-      explanation: "That's correct. Teams settings control the file sharing and cloud file storage options for the Files tab."
+      explanation: "That's is correct. Teams settings control the file sharing and cloud file storage options for the Files tab."
     - content: "Teams policy"
       isCorrect: false
       explanation: "That's incorrect. Teams policy doesn't control the file sharing and cloud file storage options for the Files tab."
@@ -93,4 +93,4 @@ quiz:
       explanation: "That's incorrect. Missed activity emails will not include notifications from Shared channel."
     - content: "Accept or decline a team invite to a shared channel"
       isCorrect: true
-      explanation: "That's correct. A team owner can accept or decline a team invite to a shared channel."
+      explanation: "That's is correct. A team owner can accept or decline a team invite to a shared channel."
