--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
@@ -10,7 +10,11 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Create, track, and close your OKRs with Viva Goals
-summary: Learn how to work with OKRs in Viva Goals. <br><br>**IMPORTANT** - Viva Goals is currently available only for preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+summary |
+   Learn how to work with OKRs in Viva Goals.
+   
+    > [!IMPORTANT]
+    > Viva Goals is currently available only for preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
     - Describe the main features of Viva Connections
