--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Create, track, and close your OKRs with Viva Goals
-summary |
+summary:  |
    Learn how to work with OKRs in Viva Goals.
    
     > [!IMPORTANT]
