--- a/learn-m365-pr/m365/zero-trust-applications/introduction.yml
+++ b/learn-m365-pr/m365/zero-trust-applications/introduction.yml
@@ -3,9 +3,9 @@ uid: learn-m365.zero-trust-applications.introduction
 title: Introduction
 metadata:
   unitType: introduction
-  title: introduction
-  description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
-  ms.date: 6/16/2022
+  title: Introduction
+  description: Learn about cloud applications and get an introduction to the concept of shadow IT and its impact. You'll also see how to use the Zero Trust approach to protect applications.
+  ms.date: 06/22/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
