NEW MODULE - Zero Trust - Infrastructure

--- a/learn-m365-pr/m365/zero-trust-infrastructure/index.yml
+++ b/learn-m365-pr/m365/zero-trust-infrastructure/index.yml
@@ -3,17 +3,20 @@ uid: learn-m365.zero-trust-infrastructure
 metadata:
   moduleType: standard
   title: zero-trust-infrastructure
-  description: In recent years, the Zero Trust infrastructure.
-  ms.date: 6/16/2022
+  description: Infrastructure is a broad term that covers all hardware, software, servers, networks, facilities, and much more in your organization. Utilizing Zero Trust principles can help to reduce your infrastructure's exposure to cyberattacks through improved monitoring, configuration management, and keeping software up-to-date.
+  ms.date: 7/5/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: zero-trust-infrastructure
-summary: ""
+summary: Infrastructure is a broad term that covers all hardware, software, servers, networks, facilities, and much more in your organization. Utilizing Zero Trust principles can help to reduce your infrastructure's exposure to cyberattacks through improved monitoring, configuration management, and keeping software up-to-date.
 abstract: |
   By the end of this module, you'll be able to:
-    - "TODO learning objective 1"
+    - Describe the threat vectors associated with your infrastructure.
+    - Describe how configuration management can improve your infrastructure.
+    - Describe how monitoring your infrastructure can identify possible vulnerabilities and attacks.
+
 prerequisites: |
   - None
 iconUrl: /learn/achievements/generic-badge.svg
@@ -28,6 +31,9 @@ subjects:
   - security
 units:
 - learn-m365.zero-trust-infrastructure.introduction
+- learn-m365.zero-trust-infrastructure.what-infrastructure
+- learn-m365.zero-trust-infrastructure.assess-monitor-infrastructure
+- learn-m365.zero-trust-infrastructure.harden-infrastructure
 - learn-m365.zero-trust-infrastructure.knowledge-check
 - learn-m365.zero-trust-infrastructure.summary
 badge:
