--- a/learn-m365-pr/m365/zero-trust-infrastructure/what-infrastructure.yml
+++ b/learn-m365-pr/m365/zero-trust-infrastructure/what-infrastructure.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.zero-trust-infrastructure.what-infrastructure
-title: Introduction
+title: What is infrastructure?
 metadata:
   unitType: learning-content
-  title: Introduction
+  title: What is infrastructure?
   description: Learn what is meant by the term infrastructure.
   ms.date: 7/5/2022
   author: beccarobins
