NEW MODULE - Zero Trust - Networks

--- a/learn-m365-pr/m365/zero-trust-networks/summary.yml
+++ b/learn-m365-pr/m365/zero-trust-networks/summary.yml
@@ -4,7 +4,7 @@ title: Summary
 metadata:
   unitType: summary
   title: summary
-  description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
+  description: Summarize what you've learned in this module.
   ms.date: 6/16/2022
   author: beccarobins
   ms.author: beccarobins
