--- a/learn-m365-pr/m365/zero-trust-networks/introduction.yml
+++ b/learn-m365-pr/m365/zero-trust-networks/introduction.yml
@@ -3,8 +3,8 @@ uid: learn-m365.zero-trust-networks.introduction
 title: Introduction
 metadata:
   unitType: introduction
-  title: introduction
-  description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
+  title: Introduction
+  description: At their most simplistic, networks are a collection of connected devices.
   ms.date: 6/16/2022
   author: beccarobins
   ms.author: beccarobins
