--- a/learn-m365-pr/m365/viva-connections-plan/6-knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/6-knowledge-check.yml
@@ -11,75 +11,97 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 1
-###########################################################################
-###
-### General guidance (https://review.docs.microsoft.com/learn-docs/docs/id-guidance-knowledge-check)
-###  - Questions are complete sentences ending with a question mark
-###  - No true/false questions
-###  - 3 answers per question
-###  - All answers about the same length
-###  - Numeric answers listed in sorted order
-###  - No "All of the above" and/or "None of the above" as answer choices
-###  - No "Not" or "Except" in questions
-###  - No second person ("you") in the questions or answers
-###  - Provide a meaningful explanation for both correct and incorrect answers
-###
-###########################################################################
+
 content: |
 quiz:
   questions:
-  - content: ""
+  - content: "You are determining key stakeholders for implementing Viva Connections into your team. What is the best way to decide who is on your team?"
     choices:
-    - content: ""
+    - content: "Welcome all organization employees who want to serve on the Viva
+        Connections planning team."
+      isCorrect: false
+      explanation: "Key stakeholders need to have deep understanding
+            of their business areas and certain jobs and roles, although
+            employees should be encouraged to voice their opinions on
+            the design of Viva Connections through various organization
+            communication channels, such as SharePoint sites, Yammer
+            community."
+    - content: "Recruit IT professionals from each business unit since they have
+        full understanding of their local IT infrastructure settings and
+        audience groups."
+      isCorrect: false
+      explanation: "IT professionals are a critical part of the key
+            stakeholders, but you will need a team of people with
+            various job functions and roles to fully understand the
+            employees needs and tasks, such as Human Resources, business
+            owners, and SharePoint site owners, and communication
+            specialists."
+    - content: "Select a team of stakeholders to ensure the right scenarios are
+        prioritized in all levels and departments of an organization."
       isCorrect: true
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "You will need a team of people with various job
+            functions and roles to fully understand the employees' needs
+            and daily job functions, such as Human Resources, business
+            owners, SharePoint site owners, and communication
+            specialists."
+  - content: "You are thinking about which tools and resources should be prioritized into your organization's instance of Viva Connections. What should you do before creating and implementing the experience?"
     choices:
-    - content: ""
+    - content: "Think about the types of problems, daily tasks, and scenarios
+        that each of your employee groups faces on a daily basis.
+        Conduct a needs assessment and then choose tools and resources
+        to support insights uncovered in the needs assessment
+        accordingly."
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "Analyzing your employees' daily tasks and typical
+            scenarios is the best place to start when planning which
+            tools and links you will incorporate on your team's Viva
+            Connections."
+    - content: "Select the tools and links that you feel your employees would
+        benefit from, and then implement them right away."
       isCorrect: false
-      explanation: ""
-    - content: ""
+      explanation: "Before implementing, identify which tools and
+            links could improve your employees' productivity by
+            conducting a needs assessment and prioritize them."
+    - content: "Implement the same tools and experiences for every employee."
       isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "Viva Connections provides users with personalized
+            workplace solutions based on their roles and needs. This
+            means not every employeewill have the exact same Dashboard
+            on Viva Connections."
+  - content: "Which approach below ensures users have quick access to curated news and company-wide communications?"
     choices:
-    - content: ""
+    - content: "Set up a card on the Viva Connections Dashboard."
+      isCorrect: false
+      explanation: "The Top New Card in the Dashboard is a way to
+            surface boosted news from SharePoint. However, the Feed is
+            what provides users with easy access to company-wide news
+            and communications about their region or role."
+    - content: "The Feed"
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "The Feed in Viva Connections dynamically displays
+            news and announcements that is personalized to the viewers
+            role and location."
+    - content: "The Resources tab"
       isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "While the Resources tab in Viva Connections
+            allows users toaccess sites, pages, news, and more form
+            Teams, it does not provide a constant stream of news and
+            announcements targeted toward employee groups based on
+            region and role."
+  - content: "Which approach below best demonstrates recommended practices to announce, launch and scale Viva Connections?"
     choices:
-    - content: ""
+    - content: "Plan to announce Viva Connections at the all-company meeting and send out an email to everyone to remind them to try the tool."
+      isCorrect: false
+      explanation: "An all-company meeting is a great channel for sharing announcements, but it is unlikely you will reach everyone in your organization in one meeting. Sending an email is another effective method of communication but does not provide enough guidance toinfluence long term change."
+    - content: "Plan to send out a series of emails and posts in Teams that include tutorial videos."
+      isCorrect: false
+      explanation: "Systematic communications and tutorial content are
+        vital components to the adoption of Viva Connections, but this
+        plan may exclude people who do not have access to a dedicated
+        desktop or mobile device at work."
+    - content: "Plan to use a variety of communications methods that reach everyone at the organization and highlight hands-on training opportunities, digital resources, and ongoing support from champions in your organizaiton. Find early adopters and champions and create ways to extend their enthusiasm to the rest of the organization."
       isCorrect: true
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-  - content: ""
-    choices:
-    - content: ""
-      isCorrect: true
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
+      explanation: "This plan best incorporates known success factors like
+        using a variety of communication methods, providing training
+        opportunities, and the continuing to engage with Viva
+        Connections champions."
