--- a/learn-m365-pr/m365/zero-trust-data/summary.yml
+++ b/learn-m365-pr/m365/zero-trust-data/summary.yml
@@ -3,8 +3,8 @@ uid: learn-m365.zero-trust-data.summary
 title: Summary
 metadata:
   unitType: summary
-  title: summary
-  description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
+  title: Summary
+  description: Summarize the content of this module.
   ms.date: 6/16/2022
   author: beccarobins
   ms.author: beccarobins
