fix module 1 unit 2 links

--- a/learn-m365-pr/m365/viva-connections-introduction/5-knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/5-knowledge-check.yml
@@ -101,4 +101,4 @@ quiz:
     - content: "Providing a central place to navigate to popular portals and
         resources."
       isCorrect: false
-      explanation: "Viva Connections Resources will need to be customed when you set up global navigation in SharePoint."
+      explanation: "Viva Connections Resources will need to be customized when you set up global navigation in SharePoint."
